objects/Sale_Discount__c.object
<CustomObject>
    <description>Contains all the discounts. A discount can be applied on sales or sales items.</description>
    <label>Sale Discount</label>
    <nameField>
        <displayFormat>DISC-{000000}</displayFormat>
        <label>Sale Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sale Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Sale.</description>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Sale Discounts</relationshipLabel>
        <relationshipName>Sale_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sale_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Sale Item.</description>
        <label>Sale Item</label>
        <referenceTo>Sale_Item__c</referenceTo>
        <relationshipLabel>Sale Discounts</relationshipLabel>
        <relationshipName>Sale_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIXED_VALUE_COUPON</fullName>
                </value>
                <value>
                    <fullName>FREE_ENGRAVING_COUPON</fullName>
                </value>
                <value>
                    <fullName>FREE_PRODUCT</fullName>
                </value>
                <value>
                    <fullName>FREE_SAMPLE</fullName>
                </value>
                <value>
                    <fullName>PERCENTAGE_COUPON</fullName>
                </value>
                <value>
                    <fullName>LRLP</fullName>
                </value>
                <value>
                    <fullName>TRLP</fullName>
                </value>
                <value>
                    <fullName>LRLV</fullName>
                </value>
                <value>
                    <fullName>TRLV</fullName>
                </value>
                <value>
                    <fullName>AMOUNT_LEVEL_1</fullName>
                </value>
                <value>
                    <fullName>AMOUNT_LEVEL_2</fullName>
                </value>
                <value>
                    <fullName>AMOUNT_LEVEL_3</fullName>
                </value>
                <value>
                    <fullName>AMOUNT</fullName>
                </value>
                <value>
                    <fullName>MIXED_COUPON_AMOUNT_UNIT_ATI</fullName>
                </value>
                <value>
                    <fullName>MIXED_COUPON_AMOUNT_UNIT_ET</fullName>
                </value>
                <value>
                    <fullName>MIXED_COUPON_AMOUNT_GLOBAL_ATI</fullName>
                </value>
                <value>
                    <fullName>MIXED_COUPON_AMOUNT_GLOBAL_ET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Sale__c</fullName>
        <description>Checks whether Sale lookup is populated in order to display Product related record component on App Builder page.</description>
        <formula>IF(ISBLANK(Sale__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <description>Amount of discount of the Sale or Sale Item.</description>
        <label>Discount Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Amount of discount of the Sale or Sale Item.</description>
        <label>Discount Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eco_Action_Code__c</fullName>
        <description>Ecommerce promo code.</description>
        <label>E-commerce Marketing Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS_Action_Code__c</fullName>
        <description>Code action marketing retail.</description>
        <label>POS Marketing Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Id_External__c</fullName>
        <description>External Id of the parent Sale. Is used to calculate relationship in Sale__c.</description>
        <externalId>true</externalId>
        <label>Sale Id External</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Sale_Item__c</fullName>
        <description>Checks whether Sale Item lookup is populated in order to display Product related record component on App Builder page.</description>
        <formula>IF(ISBLANK(Sale_Item__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Sale Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Discount percentage, based on Sale item total amount.</description>
        <formula>(Sale_Item__r.Item_Amount__c / Discount_Amount__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sale_Item_Id_External__c</fullName>
        <description>External Id of the parent Sale Item. Is used to calculate relationship in Sale_Item__c.</description>
        <label>Sale Item Id External</label>
        <length>45</length>
        <type>Text</type>
    </fields>
</CustomObject>